force-app/main/default/objects/Product2/fields/Charge_Category__c.field-meta.xml
<CustomField>
    <fullName>Charge_Category__c</fullName>
    <label>Charge Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>insurance</fullName>
                <label>Insurance</label>
            </value>
            <value>
                <fullName>Pollution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>