force-app/main/default/objects/Product2/fields/Product_Mining_Location__c.field-meta.xml
<CustomField>
    <fullName>Product_Mining_Location__c</fullName>
    <label>Product Mining Location</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>