force-app/main/default/objects/Product2/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Charge Products</fullName>
            </value>
            <value>
                <fullName>Sellable Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>